opam-version: "2.0"
name: "perf"
version: "0.1"
maintainer: "Pierre Chambart <pierre.chambart@ocamlpro.com>"
authors: "Vincent Bernardoff <vincent.bernardoff@ocamlpro.com>"
homepage: "http://github.com/OCamlPro/ocaml-perf"
bug-reports: "http://github.com/OCamlPro/ocaml-perf/issues"
license: "GPLv2"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
depends: [
  "dune" {>= "1.11.0"}
  "ocplib-endian"
  "sexplib"
  "oclock"
]
dev-repo: "git://github.com/OCamlPro/ocaml-perf"
synopsis: "Bindings to perf_event_open(2)"
